--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"start": "vite",
 		"build": "vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
@@ -18,6 +18,7 @@
 		"@mui/styled-engine-sc": "^6.2.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
 		"eslint-plugin-prettier": "^5.2.1",
+		"ol": "^10.3.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.1.0",
